2008-11-11 Charles Wilson  <libtool@cwilson.fastmail.fm>  (tiny change)
	   Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Cleanup config.lt in case LT_OUTPUT is in use.
	* lib/am/libtool.am [TOPDIR_P] (distclean-libtool): clean up
	config.lt as well as libtool.
	* tests/libtoo11.test: New test.
	* tests/Makefile.am: Update.
	* NEWS: Update.

2008-11-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* INSTALL, lib/INSTALL, lib/config.guess, lib/config.sub,
	lib/texinfo.tex: Sync from upstream.

2008-11-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Update to GFDL 1.3.
	* doc/fdl.texi: Update to GFDL 1.3.
	* doc/automake.texi (GNU Free Documentation License): Adjust.
	* NEWS: Update.

	* NEWS: Fix typos.
	* automake.in: Fix typos in comments.  Remove extraneous
	whitespace.

2008-11-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Cope with absent Perl modules threads and Thread::Queue.
	* automake.in: Instead of `use threads', use `require threads;
	import threads' inside a BEGIN section.  Likewise for
	Thread::Queue.
	* lib/Automake/ChannelDefs.pm (Automake::ChannelDefs): Likewise.
	* lib/Automake/tests/Condition-t.pl: Likewise.
	* lib/Automake/tests/DisjConditions-t.pl: Likewise.
	* configure.ac: Likewise, use `require' and `import'.
	Report by Eric Blake, fix suggested by Ben Pfaff.

2008-11-04  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Multiple 'make uninstall' should not fail even for TEXINFOS.
	* lib/am/texinfos.am (uninstall-info-am): Do not fail due to
	install-info if the installed file does not exist (any more).
	* tests/txinfo26.test: Issue multiple `make uninstall'.
	* tests/instmany-mans.test: Likewise.
	* tests/instmany-python.test: Likewise.
	* tests/instmany.test: Likewise.
	* tests/txinfo26.test: Likewise.
	* NEWS: Update.

2008-11-03  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	New public macro AM_SUBST_NOTMAKE.
	* m4/substnot.m4 (AM_SUBST_NOTMAKE): New public macro; invoke
	_AM_SUBST_NOTMAKE with arguments.