@@ -72,6 +72,7 @@ unset TESTS || :
   env TESTS="xpass xpass2" $MAKE -e check
   env TESTS='pass skip xfail' $MAKE -e check
   $MAKE check
+  :
 ) >stdout
 cat stdout
 
