@@ -1,3 +1,13 @@
+2008-11-12  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Testsuite fixes for ksh.
+	* tests/check10.test: Add ':' as last command in subshell, for
+	zero exit status of the subshell.
+	* tests/parallel-am.test: Do not let failing 'unset' of
+	nonexistent variable exit the test.
+	* tests/parallel-am2.test: Likewise.
+	* tests/parallel-am3.test: Likewise.
+
 2008-11-11 Charles Wilson  <libtool@cwilson.fastmail.fm>  (tiny change)
 	   Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
